Rewrite escape pod sinking logic.

--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -115,6 +115,7 @@
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Components\EscapePodRecharge.cs" />
+        <Compile Include="Components\EscapePodSinker.cs" />
         <Compile Include="Components\EscapePodStatusScreen.cs" />
         <Compile Include="Components\RunStatsTracker.cs" />
         <Compile Include="Components\RunStatsUI\ButtonEventTrigger.cs" />
