--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -167,6 +167,7 @@
         <Compile Include="Patches\BatteryPatcher.cs" />
         <Compile Include="Patches\CauseOfDeathPatcher.cs" />
         <Compile Include="Patches\CompassPatcher.cs" />
+        <Compile Include="Patches\CountdownPatcher.cs" />
         <Compile Include="Patches\DamageTakenPatcher.cs" />
         <Compile Include="Patches\EscapePodPatcher.cs" />
         <Compile Include="Patches\ExplosionPatcher.cs" />
