Disable non-deathrun saves in the menu.

--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -96,6 +96,7 @@
         <Compile Include="Patches\FilterPumpPatcher.cs" />
         <Compile Include="Patches\FoodChallengePatcher.cs" />
         <Compile Include="Patches\NitrogenPatcher.cs" />
+        <Compile Include="Patches\SaveFileMenuPatcher.cs" />
         <Compile Include="Patches\SurvivalPatcher.cs" />
         <Compile Include="Patches\PacifistPatcher.cs" />
         <Compile Include="Patches\PowerPatcher.cs" />
