--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -57,7 +57,6 @@
         <Compile Include="Handlers\NitrogenHandler.cs" />
         <Compile Include="Handlers\NotificationHandler.cs" />
         <Compile Include="Handlers\TooltipHandler.cs" />
-        <Compile Include="Handlers\TutorialHandler.cs" />
         <Compile Include="Handlers\WarningHandler.cs" />
         <Compile Include="Items\AcidBattery.cs" />
         <Compile Include="Items\AcidPowerCell.cs" />
@@ -74,7 +73,6 @@
         <Compile Include="Objects\Enums\Difficulty.cs" />
         <Compile Include="Objects\Enums\RunAchievements.cs" />
         <Compile Include="Objects\Enums\SafeDepthStatus.cs" />
-        <Compile Include="Objects\Enums\Tutorial.cs" />
         <Compile Include="Objects\Exceptions\DeathrunException.cs" />
         <Compile Include="Objects\LegacyStats.cs" />
         <Compile Include="Objects\Message.cs" />
@@ -82,6 +80,7 @@
         <Compile Include="Objects\RunStats.cs" />
         <Compile Include="Objects\SaveData.cs" />
         <Compile Include="Objects\StartLocation.cs" />
+        <Compile Include="Objects\Tutorial.cs" />
         <Compile Include="Objects\Warning.cs" />
         <Compile Include="Patches\AggressionPatcher.cs" />
         <Compile Include="Patches\BreathingPatcher.cs" />
