Make items and in-game messaging localisable.

--- a/DeathrunRemade/Assets.targets
+++ b/DeathrunRemade/Assets.targets
@@ -2,6 +2,7 @@
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 <!-- Define important extra files needed in the final distribution. -->
     <ItemGroup>
+        <Assets Include="Assets\Localization\*" />
         <Assets Include="Assets\*.json" />
         <Assets Include="Assets\DeathrunStarts.csv" />
         <Assets Include="Assets\highscoreswindow" />
