--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -40,12 +40,14 @@
         <Compile Include="Components\EscapePodStatusScreen.cs" />
         <Compile Include="Components\ExplosionCountdown.cs" />
         <Compile Include="Components\FastAscent.cs" />
+        <Compile Include="Components\NitrogenUI\BendsDepthCompass.cs" />
+        <Compile Include="Components\NitrogenUI\MovingBarTween.cs" />
+        <Compile Include="Components\NitrogenUI\SafeDepthHud.cs" />
         <Compile Include="Components\RunStatsTracker.cs" />
         <Compile Include="Components\RunStatsUI\ButtonEventTrigger.cs" />
         <Compile Include="Components\RunStatsUI\RunStatsHints.cs" />
         <Compile Include="Components\RunStatsUI\RunStatsWindow.cs" />
         <Compile Include="Components\RunStatsUI\RunStatsRow.cs" />
-        <Compile Include="Components\SafeDepthHud.cs" />
         <Compile Include="Configuration\Config.cs" />
         <Compile Include="Configuration\ConfigSave.cs" />
         <Compile Include="Configuration\ScoreMultPreviewText.cs" />
@@ -112,6 +114,7 @@
       <Content Include="Assets\DeathrunStarts.csv" />
       <Content Include="Assets\Localization\English.json" />
       <Content Include="Assets\RecipeChanges.json" />
+      <Content Include="Assets\safedepthhud" />
       <Content Include="Assets\ScanNumberChanges.json" />
       <Content Include="Assets\highscoreswindow" />
       <Content Include="todo_list.txt" />
@@ -142,7 +145,7 @@
       <Content Include="Assets\thermophilesample.psd" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="Subnautica.Nautilus" Version="1.0.0-pre.27" PrivateAssets="All"/>
+      <PackageReference Include="Subnautica.Nautilus" Version="1.0.0-pre.27" PrivateAssets="All" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="..\HootLib-Subnautica\HootLib\HootLib.projitems" Label="Shared" />
