Make custom item changes reversible.

--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -65,13 +65,22 @@
         <Compile Include="Handlers\WarningHandler.cs" />
         <Compile Include="Items\AcidBattery.cs" />
         <Compile Include="Items\AcidPowerCell.cs" />
+        <Compile Include="Items\ChemosynthesisTank.cs" />
         <Compile Include="Items\DeathrunPrefabBase.cs" />
         <Compile Include="Items\DecompressionModule.cs" />
         <Compile Include="Items\FilterChip.cs" />
-        <Compile Include="Items\MobDrop.cs" />
-        <Compile Include="Items\Suit.cs" />
-        <Compile Include="Items\Tank.cs" />
+        <Compile Include="Items\LavaLizardScale.cs" />
+        <Compile Include="Items\MobDropBase.cs" />
+        <Compile Include="Items\PhotosynthesisTank.cs" />
+        <Compile Include="Items\PhotosynthesisTankSmall.cs" />
+        <Compile Include="Items\ReinforcedFiltrationSuit.cs" />
+        <Compile Include="Items\ReinforcedSuitMk2.cs" />
+        <Compile Include="Items\ReinforcedSuitMk3.cs" />
+        <Compile Include="Items\SpineEelScale.cs" />
+        <Compile Include="Items\SuitBase.cs" />
+        <Compile Include="Items\TankBase.cs" />
         <Compile Include="Components\DeathrunTank.cs" />
+        <Compile Include="Items\ThermophileSample.cs" />
         <Compile Include="Items\VanillaRecipeChanges.cs" />
         <Compile Include="Objects\Attributes\PatchCategory.cs" />
         <Compile Include="Objects\DeathrunStats.cs" />
