--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -123,6 +123,7 @@
         <Compile Include="Patches\RadiationPatcher.cs" />
         <Compile Include="Patches\SuitPatcher.cs" />
         <Compile Include="Patches\TooltipPatcher.cs" />
+        <Compile Include="Patches\VanillaBugFixPatcher.cs" />
         <Compile Include="Patches\WaterMurkPatcher.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
@@ -161,7 +162,7 @@
       <Content Include="Assets\thermophilesample.psd" />
     </ItemGroup>
     <ItemGroup>
-      <PackageReference Include="Subnautica.Nautilus" Version="1.0.0-pre.29" PrivateAssets="All" />
+      <PackageReference Include="Subnautica.Nautilus" Version="1.0.0-pre.32" PrivateAssets="All" />
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="..\HootLib-Subnautica\HootLib\HootLib.projitems" Label="Shared" />
