--- a/DeathrunRemade/DeathrunRemade.csproj
+++ b/DeathrunRemade/DeathrunRemade.csproj
@@ -28,6 +28,14 @@
         <Optimize>true</Optimize>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
+    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'BetaUpdates|x64' ">
+      <OutputPath>bin\BetaUpdates\</OutputPath>
+      <PlatformTarget>x64</PlatformTarget>
+      <DefineConstants>DEBUG;</DefineConstants>
+      <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+      <DebugSymbols>true</DebugSymbols>
+      <DebugType>portable</DebugType>
+    </PropertyGroup>
     
     <ItemGroup>
         <Reference Include="System" />
@@ -140,6 +148,8 @@
       <Content Include="Assets\safedepthhud" />
       <Content Include="Assets\ScanNumberChanges.json" />
       <Content Include="Assets\highscoreswindow" />
+      <Content Include="SNBetaReferences.targets" />
+      <Content Include="SNReferences.targets" />
       <Content Include="todo_list.txt" />
       <EmbeddedResource Include="Assets\AcidBattery.png" />
       <EmbeddedResource Include="Assets\AcidPowerCell.png" />
@@ -167,9 +177,8 @@
       <EmbeddedResource Include="Assets\thermophilesample.png" />
       <Content Include="Assets\thermophilesample.psd" />
     </ItemGroup>
-    <ItemGroup>
-      <PackageReference Include="Subnautica.Nautilus" Version="1.0.0-pre.39" PrivateAssets="All" />
-    </ItemGroup>
+    <Import Project="$(MSBuildThisFileDirectory)SNReferences.targets" Condition="$(Configuration) != 'BetaUpdates'"/>
+    <Import Project="$(MSBuildThisFileDirectory)SNBetaReferences.targets" Condition="$(Configuration) == 'BetaUpdates'"/>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <Import Project="..\HootLib-Subnautica\HootLib\HootLib.projitems" Label="Shared" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
